update: リストおよび詳細な例外箇所

--- a/OAS.yaml
+++ b/OAS.yaml
@@ -65,6 +65,12 @@ paths:
                   size:
                     type: integer
                     example: 10
+        '400':
+          description: パラメータ検証エラー
+        '401':
+          description: 認証失敗
+        '500':
+          description: サーバー内部エラー
   /devices/{id}:
     parameters:
       - name: id
@@ -91,7 +97,26 @@ paths:
                     type: integer
                     example: 200
                   data:
-                    $ref: '#/components/schemas/Device'
+                    type: object
+                    properties:
+                      deviceInfo:
+                        $ref: '#/components/schemas/Device'
+                      ipInfoList:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/deviceIp'
+                      monitorInfoList:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/monitorInfo'
+        '400':
+          description: パラメータ検証エラー
+        '401':
+          description: 認証失敗
+        '404':
+          description: リソースが見つかりません
+        '500':
+          description: サーバー内部エラー
 components:
   schemas:
   # 機器エンティティ
@@ -99,7 +124,7 @@ components:
       type: object
       description: 機器オブジェクト
       properties:
-        deviceId:
+        deviceId:        
           type: string
           description: 機器番号（プライマリキー）
           example: HYRON-221129 PC-DC-089
