--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,15 +1,17 @@
 spring:
-  datasource:
-    url: jdbc:postgresql://pgm-uf6ixk92991xy2o5eo.rwlb.rds.aliyuncs.com:5432/postgres
-    username: root_2025
-    password: 10235As##
-
-  sql:
-    init:
-      mode: never
-
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
     show-sql: true
+  datasource:
+    url: jdbc:postgresql://localhost:5432/device_management_dev
+    username: postgres
+    password: postgres
+
+server:
+  port: 8080
+
+logging:
+  level:
+    root: INFO
+    com.device: DEBUG
