--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # Server Configuration
 server.port=8080
-server.servlet.context-path=/api
+server.servlet.context-path=/
 
 # Application Name
+
 spring.application.name=device-management
 
 # JPA/Hibernate Configuration
@@ -41,3 +42,7 @@ spring.servlet.multipart.max-request-size=10MB
 # Jackson Configuration
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.time-zone=UTC
+
+
+# 临时禁用Spring Security
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
