--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,19 @@
             <artifactId>commons-pool2</artifactId>
         </dependency>
 
+        <!-- Mapstruct(Entity -> DTO) -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.5.5.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.5.5.Final</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
