--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 
 # PostgreSQL Database Configuration
-spring.datasource.url=${DBURL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/permission
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=${DBusername}
-spring.datasource.password=${DBpassword}
+spring.datasource.username=postgres
+spring.datasource.password=123456
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.auto-commit=true
